<resources>
    <string name="app_name">E-Sort</string>
    <string name="AppName">ESort</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="submitText">Submit</string>
    <string name="loginButtonText">Login</string>
    <string name="signUpButtonText">Sign Up</string>
    <string name="LoginLabel">Login</string>
    <string name="ConfirmPassHint">Confirm Password</string>
    <string name="SignUpLabel">Sign Up</string>
    <string name="title_activity_my_orgs">My Organizations</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <string name="action_example">Example Action</string>

    <string name="action_Join">Join</string>
    <string name="action_Make">Make</string>

    <string name="error_blank_username">Username is Required\n</string>
    <string name="error_blank_password">Password is Required\n</string>
    <string name="error_blank_confirm">Please Confirm Your Password\n</string>
    <string name="error_mismatched_passwords">Passwords Do Not Match\n</string>

    <string name="ApplicationId">Py4qIlkam7AMV9kJD2JJUSvEZ37txStfYucXATOu</string>
    <string name="ClientKey">UkSXqKtavufn4cmf6baJ9PUK8cKU1wnPtL3MqcxT</string>

    <string name="DrawerMenuProfile">Profile</string>
    <string name="DrawerMenuLogout">Logout</string>
    <string name="DrawerHeaderAccount">Account</string>
    <string name="DrawerMyTeams">Owned Teams</string>
    <string name="DrawerTeamsImIn">Joined Teams</string>
    <string name="title_activity_team_participant">TeamParticipantActivity</string>
    <string name="title_activity_my_profile">Profile</string>
    <string name="title_activity_sort">SortActivity</string>
    <string name="title_activity_team_sorted">TeamSortedActivity</string>
    <string name="StyleHeader">Style:\u0020</string>
    <string name="error_invalid_email">Invalid Email Address\n</string>
    <string name="accountDetailsLabel">Account Details</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="nextText">Next</string>
    <string name="changeLaterText">You can change this information later.</string>
    <string name="joinOrg">Join Organization</string>
    <string name="Action_Edit">Edit</string>
    <string name="contactTeamButton">Contact Your Team</string>

    <string-array name="styles_array">
        <item>Activation</item>
        <item>Relational</item>
        <item>Strategic</item>
    </string-array>

    <string-array name="traits_array">
        <item>Disruptor</item>
        <item>Relationship</item>
        <item>Selling</item>
        <item>Risk</item>
        <item>Determination</item>
        <item>Knowledge</item>
        <item>Confidence</item>
        <item>Delegator</item>
        <item>Profitability</item>
        <item>Independence</item>
    </string-array>

</resources>
