<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.brett.esort.SignupDetailsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="45sp"
        android:textColor="@color/purple"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:text="@string/accountDetailsLabel"
        android:id="@+id/accountDetailsLabel"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="12sp"
        android:textColor="@color/grey"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="25dp"
        android:text="@string/changeLaterText"
        android:id="@+id/detailsHint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/firstName"
        android:id="@+id/firstNameField"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/lastName"
        android:id="@+id/lastNameField"
        android:layout_gravity="center_horizontal" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitText"
        android:id="@+id/submitButton"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
