<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".StartActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="64sp"
        android:textColor="@color/purple"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/AppName"
        android:id="@+id/loginLabel"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:id="@+id/imageView"
        android:src="@drawable/badasslogo"
        android:layout_gravity="center_horizontal"
        tools:ignore="ContentDescription" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginButtonText"
        android:id="@+id/goToLogin"
        android:layout_gravity="center_horizontal"
        android:onClick="OnLoginClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUpButtonText"
        android:id="@+id/goToSignUp"
        android:layout_gravity="center_horizontal"
        android:onClick="OnSignUpClick"/>
</LinearLayout>
